--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -6,6 +6,7 @@
     <title>{title ?: 'Home'} - Career Competency Matrix</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
     <link rel="stylesheet" href="/css/theme.css">
+    <link rel="stylesheet" href="/css/matrix.css">
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
 </head>
 <body>
@@ -13,6 +14,7 @@
         <nav>
             <ul>
                 <li><a href="/" class="brand"><strong>Competency Matrix</strong></a></li>
+                <li><a href="/matrix">Matrix</a></li>
             </ul>
             <ul>
                 <li>
