--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/theme.css">
     <link rel="stylesheet" href="/css/matrix.css">
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
+    <script src="/js/matrix.js"></script>
 </head>
 <body>
     <header class="container">
