Added skills page

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -15,6 +15,7 @@
         <nav>
             <ul>
                 <li><a href="/" class="brand"><strong>Competency Matrix</strong></a></li>
+                <li><a href="/skills">Skills</a></li>
                 <li><a href="/matrix">Matrix</a></li>
             </ul>
             <ul>
