--- a/src/main/resources/templates/skills.html
+++ b/src/main/resources/templates/skills.html
@@ -40,7 +40,7 @@
                         <table class="skills-table">
                             <thead>
                                 <tr>
-                                    <th class="skill-name">xSkill</th>
+                                    <th class="skill-name">Skill</th>
                                     <th>Required Level</th>
                                     <th>Level Description</th>
                                 </tr>
